--- a/allHymns.html
+++ b/allHymns.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 10px;
+    }
+    .banner {
+      background-color: #bae0ff;
+      padding: 10px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .banner a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      font-size: 1.3em;
+      margin-right: 15px;
+      padding: 6px 12px;
+      border-radius: 4px;
+      transition: background 0.2s;
+    }
+    .banner a:hover {
+      background: #e3f3ff;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin-bottom: 20px;
+    }
+    @media (max-width: 600px) {
+      .banner a {
+        font-size: 1em;
+        margin-right: 8px;
+        padding: 4px 8px;
+      }
+      h1 {
+        font-size: 1.5em;
+      }
+      h2 {
+        font-size: 1.1em;
+      }
+    }
+  </style>
+</head>
 <body>
 
 <h1>All Hymns 2025</h1>
 <!-- Banner with tabs linking to internal sections -->
-<div style="background-color: #bae0ff; padding: 10px; margin-bottom: 10px;">
-  <a href="#section1" style="margin-right: 15px; text-decoration: none; color: #333; font-weight: bold; font-size: 1.3em;">Gloria</a>
-  <a href="#section2" style="margin-right: 15px; text-decoration: none; color: #333; font-weight: bold; font-size: 1.3em;">Credo</a>
-  <a href="#section3" style="margin-right: 15px; text-decoration: none; color: #333; font-weight: bold; font-size: 1.3em;">Sanctus</a>
-  <a href="#section5" style="margin-right: 15px; text-decoration: none; color: #333; font-weight: bold; font-size: 1.3em;">LordsPrayer</a>
+<div class="banner">
+  <a href="#section1">Kyrie</a>
+  <a href="#section2">Gloria</a>
+  <a href="#section3">Credo</a>
+  <a href="#section4">Sanctus</a>
+  <a href="#section5">Agnus Dei</a>
+  <a href="#section6">LordsPrayer</a>
 </div>
 
-This page contains all hymns sung at 11 am mass at St Mary of Angel's Church, Wellington, 2025. It has the potential to develop into a more complicated document for all mass book in the future. This is created for my personal use. For your use, I assume certain familiarity with liturgies at this stage.
-<h2 id="section1" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Gloria</h2>
-<img src="pictures/Gloria_XI.svg" style="max-width: 100%; height: auto;">
+<p>This page contains all hymns sung at 11 am mass at St Mary of Angel's Church, Wellington, 2025. It has the potential to develop into a more complicated document for all mass book in the future. This is created for my personal use. For your use, I assume certain familiarity with liturgies at this stage.</p>
 
-<h2 id="section2" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Credo</h2>
-<img src="pictures/Credo_III.svg" style="max-width: 100%; height: auto;">
+<h2 id="section1" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Kyrie</h2>
+<img src="pictures/KyrieV.svg" alt="Kyrie">
 
-<h2 id="section3" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Sanctus</h2>
-<img src="pictures/Sanctus_XIV.svg" style="max-width: 100%; height: auto;">
+<h2 id="section2" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Gloria</h2>
+<img src="pictures/Gloria_XI.svg" alt="Gloria">
 
-<h2 id="section4" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Agnus Dei</h2>
-<img src="pictures/AgnusDei_XIII.svg"  style="max-width: 100%; height: auto;">
+<h2 id="section3" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Credo</h2>
+<img src="pictures/Credo_III.svg" alt="Credo">
 
-<h2 id="section5" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Lord's Prayer</h2>
-<img src="pictures/Pater.svg"  style="max-width: 100%; height: auto;">
+<h2 id="section4" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Sanctus</h2>
+<img src="pictures/Sanctus_XIV.svg" alt="Sanctus">
+
+<h2 id="section5" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Agnus Dei</h2>
+<img src="pictures/AgnusDei_XIII.svg" alt="Agnus Dei">
+
+<h2 id="section6" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Lord's Prayer</h2>
+<img src="pictures/Pater.svg" alt="Lord's Prayer">
 
 </body>
 </html>
