add national shrine prayer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-<h1>All Hymns 2025</h1>
+<h1>All Hymns & Prayers 2025</h1>
 <!-- Banner with tabs linking to internal sections -->
 <div class="banner">
   <a href="#section1">Kyrie</a>
@@ -59,7 +59,8 @@
   <a href="#section3">Credo</a>
   <a href="#section4">Sanctus</a>
   <a href="#section5">Agnus Dei</a>
-  <a href="#section6">LordsPrayer</a>
+  <a href="#section6">National Shrine Prayer</a>
+  <a href="#section7">LordsPrayer</a>
 </div>
 
 <p>This page contains all hymns sung at 11 am mass at St Mary of Angel's Church, Wellington, 2025. It has the potential to develop into a more complicated document for all mass book in the future. This is created for my personal use. For your use, I assume certain familiarity with liturgies at this stage.</p>
@@ -79,7 +80,31 @@
 <h2 id="section5" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Agnus Dei</h2>
 <img src="pictures/AgnusDei_XIII.svg" alt="Agnus Dei">
 
-<h2 id="section6" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Lord's Prayer</h2>
+<h2 id="section6" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">National Shrine Prayer</h2>
+<div style="text-align: center;">
+
+  <p>
+    E te Atua, Creator of heaven and earth,<br>
+    Source of all life, giver of all that is good,<br>
+    We pray for Aotearoa New Zealand<br>
+    And for all who come to her shores and make it their home.<br>
+    We recall with gratitude our forebears in the Faith,<br>
+    Who dedicated this country to the care of Mary,<br>
+    Mother of God, assumed into heaven.<br>
+    Pour out your Spirit upon us as we seek to respond to you,<br>
+    Bringing your peace and harmony to this sacred land.<br>
+    May we continue to praise you as we carry the Good News<br>
+    of Jesus Christ to our brothers and sisters.<br>
+    We make this prayer through Christ, our Lord. Amen.<br>
+    Mary, assumed into heaven; pray for us.<br>
+                                        <br>
+  </p>
+
+</div>
+
+
+
+<h2 id="section7" style="border-bottom: 4px solid #bae0ff; padding-bottom: 4px; margin-bottom: 16px;">Lord's Prayer</h2>
 <img src="pictures/Pater.svg" alt="Lord's Prayer">
 
 </body>
